# Geopoly

./: .gitignore  Date_Monopoly.docx  README.md  cards-cur-state.txt  check_output.txt  compile_errors.txt  fix_action_strings.py  fix_gamestep_variants.py  fix_out_of_turn_end_turn.py  fix_schema_airport.py  fix_turn_ends.py  fix_turn_ends_clean.py  fix_turn_ends_fully.py  game-dimensions.txt
backend/: Cargo.toml  errors.txt
backend/game-engine/: Cargo.toml  build_err.txt  check_err.txt  check_errors.txt  err_full.txt  errors.txt  out.txt  output.txt
backend/game-engine/src/: board.rs  cards.rs  game.rs  lib.rs  main.rs  passport.rs  player.rs
backend/server/: Cargo.toml  build_log.txt  check_out.txt  check_out_2.txt  check_out_3.txt  check_out_4.txt  check_out_5.txt  check_out_6.txt  check_output.txt  server_check_err.txt  server_check_err_2.txt  server_check_err_3.txt
backend/server/src/: database.rs  main.rs  model.rs  schema.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue  apollo.ts  main.ts
frontend/src/components/: BoardDemo.vue  CardHand.vue  GameBoard.vue  Passport.vue  PassportDemo.vue
frontend/src/components/board/: ActivityLog.vue  CardStack.vue  ChatIcon.vue  ChatPanel.vue  DiceDuel.vue  DicePanel.vue  GameBoard.vue  GameDice.vue  GameToken.vue  Passport.vue  PlayerSelectionModal.vue  Stamp.vue  StampSelectionModal.vue  WinnerAnnouncement.vue
frontend/src/components/login/: Footer.vue  (+5 more)
frontend/src/graphql/: operations.ts
frontend/src/router/: index.ts
frontend/src/views/: LobbyView.vue
(+1 files in other folders)
