[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.2.1", features = ["bson", "chrono"] }
async-graphql-axum = "7.2.1"
axum = "0.8.8"
mongodb = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
game-engine = { path = "../game-engine" }
