[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.10", features = ["bson", "chrono"] }
async-graphql-axum = "5.0.10"
axum = "0.6.20"
tokio = { version = "1.28", features = ["full"] } # Tokio 1.x is stable
mongodb = "2.8.0" # Sticking to 2.8 which we know fits
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4.0", features = ["cors"] } # Tower-http 0.4 fits Axum 0.6
game-engine = { path = "../game-engine" }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures = "0.3"
